--- a/src/components/imgCarusel/imgCarusel.module.css
+++ b/src/components/imgCarusel/imgCarusel.module.css
@@ -9,6 +9,8 @@
     width: 100%;
     background-size: cover;
     background-position: center;
+    object-fit: contain;
+    background-color: #eff2f7;;
 }
 
 .caruselConteiner > .caruselImg {
